支持自动配置缓存目录